--- a/public/relatorios.html
+++ b/public/relatorios.html
@@ -109,13 +109,19 @@
                     report: reportData
                 })
             })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.json();
+            })
             .then(data => {
+                console.log('Resposta do servidor:', data);
                 alert('Relatório enviado com sucesso.');
             })
             .catch(error => {
                 console.error('Erro ao enviar o relatório:', error);
-                alert('Erro ao enviar o relatório.');
+                alert('Erro ao enviar o relatório: ' + error.message);
             });
         }
     </script>
