--- a/public/ganhos.html
+++ b/public/ganhos.html
@@ -55,7 +55,7 @@
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js';
         import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js';
-        import { getDatabase, ref, push } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js';
+        import { getDatabase, ref, push, set } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js';
 
         const firebaseConfig = {
             apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
@@ -105,12 +105,21 @@
                 pix: document.getElementById('pix').value,
                 observacoes: document.getElementById('observacoes').value,
                 totalReceber: document.getElementById('totalReceber').value,
-                userId: user.uid
+                userId: user.uid,
+                email: user.email
             };
 
             try {
                 const db = getDatabase();
-                await push(ref(db, 'relatorios'), relatorio);
+                const newRelatorioRef = push(ref(db, 'relatorios'));
+                await set(newRelatorioRef, relatorio);
+
+                // Adicionar o relatório à página individual do motoboy
+                const motoboyPath = getMotoboyPath(user.email);
+                if (motoboyPath) {
+                    await set(ref(db, `${motoboyPath}/${relatorio.data}`), relatorio);
+                }
+
                 console.log('Relatório enviado com sucesso');
                 document.getElementById('mensagemSucesso').style.display = 'block';
                 document.getElementById('formGanhos').reset();
@@ -122,6 +131,25 @@
                 } else {
                     alert('Erro ao enviar relatório. Por favor, verifique sua conexão e tente novamente mais tarde.');
                 }
+            }
+        }
+
+        function getMotoboyPath(email) {
+            switch (email) {
+                case 'boazd3@gmail.com':
+                    return 'motoboys/boaz';
+                case 'fellipeirineu90@gmail.com':
+                    return 'motoboys/fellipematheus';
+                case 'giovanni.silva18@gmail.com':
+                    return 'motoboys/giovanni';
+                case 'moises110723@gmail.com':
+                    return 'motoboys/moises';
+                case 'felipeaugusto02001@gmail.com':
+                    return 'motoboys/felipeaugusto';
+                case 'musculacaoatual@gmail.com':
+                    return 'motoboys/jackson';
+                default:
+                    return null;
             }
         }
 
